manifest/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-v3
  labels:
    app: api-v3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-v3
  template:
    metadata:
      name: api-v3
      labels:
        app: api-v3
    spec:
      containers:
        - name: api-v3
          image: vatusa/api-v3
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
