manifest/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-v3
spec:
  selector:
    app: api-v3
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9001
  type: ClusterIP
