manifest/api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-v3
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - api.vatusa.dev
      secretName: cloudflare-tls
  rules:
    - host: api.vatusa.dev
      http:
        paths:
          - path: /v3
            pathType: Prefix
            backend:
              service:
                name: api-v3
                port:
                  number: 80
